# photo-sorter

./: .gitignore  CMakeLists.txt  README.md  main.cpp  photo_file.cpp  photo_file.h  photo_util.cpp
app/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  filesystem_interface.h  filesystem_interface_impl.h  local_exception.h  photo_data.cpp  photo_data.h  photo_data_impl.cpp  photo_data_impl.h  photo_file.cpp  photo_file.h  photo_util.cpp  photo_util.h  rethrown_exception.h
test/: CMakeLists.txt  filesystem_interface_mock.h  photo_data_mock.h  photo_data_test.cpp  photo_file_test.cpp  photo_util_test.cpp
